$Id$


v0.71.1		28-Nov-2004

	porting:
		Compiles more or less on x86_64, there are issues with utmp
		and struct lastlog
		Compiles on NetBSD i386.
		Compiles in Alpha.

	upgrade:
		Make sure you remove everything related to bbslist menus from
		your menus and txtfiles.

	general:
		Added port to OpenBSD, is under test.

	mbsebbs:
		The creation of the mailout semafore is now after the hangup
		so that mbfido won't start before the bbs is finished.
		Removed bbslist menus, this will become a door.
		Added #define NFGVMIN 1 in openport.
		During hangup we set sighup to ignore.
		Made zmodem-8k downloads work again.
		Some small buffer protections added in addfile.
		Fixed keyboad input for all bigendian machines.

	mbnewuser:
		During hangup we set sighup to ignore.
		Fixed keyboad input for all bigendian machines.

	mbfile:
		The adopt command now first checks if the filename is 8.3 or a
		long filename and the correct format for import is then set.
		With mbfile import, download counters in files.bbs are skipped.
		When the file description was missing in files.bbs with the
		import command, mbfile would crash. Now a dummy description is
		inserted.
		The directory from which the import is done is first tested for
		write access, if forbidden then no import is done. This also
		means you cannot import directly from CD's but that you need
		to copy the CD contents first to a harddisk.
		Better error reporting if something is wrong.
		The import command now also figures out the difference between
		8.3 and long filenames and does the right thing during import.
		During file import the destination is tested for both 8.3 and
		LFN for an existing file. Improved error reporting.
		With mbfile import the original file isn't renamed anymore.
		Fixed error reporting when files in files.bbs were not found
		on disk.

	mbfido:
		In rfc2ftn a debug logmessage added to check for unrecognised
		message ids.