@@ -7,14 +7,17 @@ v0.71.1		28-Nov-2004
 		Compiles more or less on x86_64, there are issues with utmp
 		and struct lastlog
 		Compiles on NetBSD i386.
-		Compiles in Alpha.
+		Compiles on Alpha.
+		Doesn't compile on Mac OS X.
 
 	upgrade:
 		Make sure you remove everything related to bbslist menus from
 		your menus and txtfiles.
 
 	general:
-		Added port to OpenBSD, is under test.
+		Added port to OpenBSD, is under test (and doesn't work).
+		Code cleanup so that compile stops on unknown OSes and CPUs
+		instead of missing code parts.
 
 	mbsebbs:
 		The creation of the mailout semafore is now after the hangup
